=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.14 - In development

=over

=item *

Removed the need for F<bin/krang_addon_dist> to have a valid F<krang.conf>
since it doesn't actually use anything in that. This allows for
automating the building of a package from a Krang svn checkout that is
built. [Michael Peters]

=item *

Fixed FTP download of templates with UTF8 characters in binary mode.  [Brad Oaks]

=item *

Editing and saving an existing category will now convert a story with a duplicate
url into a category index. This check already happens when creating a new category.
[Brad Oaks]

=back

=head2 3.13 - Apr, 5 2011

=over

=item *

Fixed display issue of time selector in Krang::ElementClass::DateTime
(thanks to Mike Lampson for this patch). [Bodo Schulze]

=item *

Fixed bug where you couldn't uncheck the "Show Story Type and Version"
checkbox on the "Find Stories" screen. [Michael Peters]

=item *

Fixed bug where you couldn't uncheck the "Search full text?" checkbox
on the "Find Templates" screen. [Michael Peters]

=item *

C<hidden> parameters of elements can now be a subroutine reference which
will be executed at runtime and that value used. [Michael Peters]

=item *

Fixed problems with un-localized C<$@> which could make some error
messages not appear in the logs. [Michael Peters]

=item *

Fixed wacky partial error screen when unexpected erorrs happened during
publish from the web UI. [Michael Peters]

=back

=head2 3.12 - Jan, 13 2011

=over

=item *

Added C<--NoStart> option to F<bin/krang_install> when you want to install
but then later tweek things (like F<conf/krang.conf>) before starting the
servers. [Michael Peters]

=item *

Added C<--NoDB> option to F<bin/krang_install> for use when you already
have an existing Krang DB and want a new install to use that. [Michael Peters]

=item *

Added "hostname dictionary" feature to F<krang.conf> so that you can