@@ -8,6 +8,10 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added C<IgnorePreviewRelatedStoryAssets> and C<IgnorePreviewRelatedMediaAssets> configuration directives so that instances can choose to ignore publishing related assets during preview. [Michael Peters]
+
+=item *
+
 Removed the need for F<bin/krang_addon_dist> to have a valid F<krang.conf>
 since it doesn't actually use anything in that. This allows for
 automating the building of a package from a Krang svn checkout that is
